// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PluginItem > (Snapshot) renders disabled state 1`] = `
<DocumentFragment>
  <div
    class="flex h-full w-full rounded border-2 border-border text-foreground p-4 bg-background shadow-shadow opacity-30 relative transition-opacity duration-250"
  >
    <div
      class="flex flex-wrap items-start gap-4 w-full"
    >
      <div
        class="flex rounded border-2 border-border text-foreground bg-background-secondary shadow-none flex-shrink-0 w-12 h-12 p-0 items-center justify-center overflow-hidden"
      >
        <svg
          class="lucide lucide-music"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9 18V5l12-2v13"
          />
          <circle
            cx="6"
            cy="18"
            r="3"
          />
          <circle
            cx="18"
            cy="16"
            r="3"
          />
        </svg>
      </div>
      <div
        class="flex-1 min-w-0"
      >
        <h3
          class="font-bold text-foreground text-lg gap-4 leading-tight inline-flex items-center"
        >
          Disabled Plugin
        </h3>
        <p
          class="text-sm text-foreground-secondary mt-1"
        >
          by Nuclear Team
        </p>
        <p
          class="text-sm text-foreground-secondary mt-2 leading-relaxed"
        >
          This plugin is currently disabled.
        </p>
      </div>
      <div
        class="flex flex-col shrink-0 h-full sm:w-auto items-start justify-center sm:items-end"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`PluginItem > (Snapshot) renders rightAccessory content 1`] = `
<DocumentFragment>
  <div
    class="flex h-full w-full rounded border-2 border-border text-foreground p-4 bg-background shadow-shadow relative transition-opacity duration-250"
  >
    <div
      class="flex flex-wrap items-start gap-4 w-full"
    >
      <div
        class="flex-1 min-w-0"
      >
        <h3
          class="font-bold text-foreground text-lg gap-4 leading-tight inline-flex items-center"
        >
          Accessory Plugin
        </h3>
        <p
          class="text-sm text-foreground-secondary mt-1"
        >
          by Nuclear Team
        </p>
        <p
          class="text-sm text-foreground-secondary mt-2 leading-relaxed"
        >
          Has accessory on the right.
        </p>
      </div>
      <div
        class="flex flex-col shrink-0 h-full sm:w-auto items-start justify-center sm:items-end"
      >
        <span>
          Accessory
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PluginItem > (Snapshot) renders with all props 1`] = `
<DocumentFragment>
  <div
    class="flex h-full w-full rounded border-2 border-border text-foreground p-4 bg-background shadow-shadow relative transition-opacity duration-250"
  >
    <div
      class="flex flex-wrap items-start gap-4 w-full"
    >
      <div
        class="flex rounded border-2 border-border text-foreground bg-background-secondary shadow-none flex-shrink-0 w-12 h-12 p-0 items-center justify-center overflow-hidden"
      >
        <svg
          class="lucide lucide-music"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9 18V5l12-2v13"
          />
          <circle
            cx="6"
            cy="18"
            r="3"
          />
          <circle
            cx="18"
            cy="16"
            r="3"
          />
        </svg>
      </div>
      <div
        class="flex-1 min-w-0"
      >
        <h3
          class="font-bold text-foreground text-lg gap-4 leading-tight inline-flex items-center"
        >
          YouTube Music
          <button
            class="inline-flex items-center transition-all rounded cursor-pointer text-foreground bg-primary border-2 border-border shadow-shadow hover:translate-x-shadow-x hover:translate-y-shadow-y hover:shadow-none size-10 justify-center"
          >
            <svg
              class="lucide lucide-settings"
              fill="none"
              height="20"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.22 2h-.44a2 2 0 0 0-2 2v.18a2 2 0 0 1-1 1.73l-.43.25a2 2 0 0 1-2 0l-.15-.08a2 2 0 0 0-2.73.73l-.22.38a2 2 0 0 0 .73 2.73l.15.1a2 2 0 0 1 1 1.72v.51a2 2 0 0 1-1 1.74l-.15.09a2 2 0 0 0-.73 2.73l.22.38a2 2 0 0 0 2.73.73l.15-.08a2 2 0 0 1 2 0l.43.25a2 2 0 0 1 1 1.73V20a2 2 0 0 0 2 2h.44a2 2 0 0 0 2-2v-.18a2 2 0 0 1 1-1.73l.43-.25a2 2 0 0 1 2 0l.15.08a2 2 0 0 0 2.73-.73l.22-.39a2 2 0 0 0-.73-2.73l-.15-.08a2 2 0 0 1-1-1.74v-.5a2 2 0 0 1 1-1.74l.15-.09a2 2 0 0 0 .73-2.73l-.22-.38a2 2 0 0 0-2.73-.73l-.15.08a2 2 0 0 1-2 0l-.43-.25a2 2 0 0 1-1-1.73V4a2 2 0 0 0-2-2z"
              />
              <circle
                cx="12"
                cy="12"
                r="3"
              />
            </svg>
          </button>
        </h3>
        <p
          class="text-sm text-foreground-secondary mt-1"
        >
          by Nuclear Team
        </p>
        <p
          class="text-sm text-foreground-secondary mt-2 leading-relaxed"
        >
          Stream music directly from YouTube Music with full search and playlist support.
        </p>
      </div>
      <div
        class="flex flex-col shrink-0 h-full sm:w-auto items-start justify-center sm:items-end"
      />
    </div>
  </div>
</DocumentFragment>
`;
